[F_WIFI] remove mrvl8997 nxp8987 package
   Description: m8mp553 have no mrvl8997 nxp8987 machine feture
   Solution: N/A
   Product: [IMX8MP_MPMP553]
   Commit Reason: N/A
   Function Area: F_WIFI

Change-Id: I63f9b4c8dadc25124da94c64315d24cf7ad7d75d

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -38,3 +38,4 @@ KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553.dtb "
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
 CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync"
 
+MACHINE_FEATURES_remove = "packagegroup-imx-mrvl8997 mrvl8997 nxp8987"
