[MACHINE_CONF] use machine conf m8mp553
   Description: N/A
   Solution: N/A
   Product: [IMX8MP_MPMP553]
   Commit Reason: N/A
   Function Area: MACHINE_CONF

Change-Id: I467bd86be17b40c5941ca6b32db4fbd6ffa51f97

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -1,4 +1,4 @@
-MACHINE ??= 'imx8mpevk'
+MACHINE ??= 'm8mp553'
 DISTRO ?= 'fsl-imx-wayland'
 PACKAGE_CLASSES ?= 'package_rpm'
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
