[KERNEL|DTS] use lvds panel 1024x600 as default
   Description: use lvds panel 1024x600 as default
   Solution: N/A
   Product: [IMX8MP_MPMP553]
   Commit Reason: N/A
   Function Area: F_KERNEL

Change-Id: Ib55bb34f62cfee4184d416de44eda334c7d04385

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -33,7 +33,12 @@ UBOOT_CONFIG[mfgtool] = "imx8mp_m8mp553_defconfig"
 UBOOT_DTB_NAME = "imx8mp-m8mp553.dtb"
 
 # Set linux kernel DTB
-KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553.dtb "
+
+#for LVDS Panel 1024x600
+KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
+
+#for LVDS Panel 1920x1080
+#KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553-lvdsg215hv.dts "
 
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
 CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync"
