[KERNEL|DTS] enable lvds panel 1920x1080 dtb
   Description: enable lvds panel 1920x1080 dtb
   Solution: N/A
   Product: [IMX8MP_MPMP553]
   Commit Reason: N/A
   Function Area: F_KERNEL

Change-Id: Ic8fbd3848b04e5de1c882c0d8b86f419e0b1b8a3

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -38,7 +38,7 @@ UBOOT_DTB_NAME = "imx8mp-m8mp553.dtb"
 KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
 
 #for LVDS Panel 1920x1080
-#KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553-lvdsg215hv.dts "
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv.dtb "
 
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
 CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync"
