[HDMI|WESTON] workaround for hdmi ho-plug fail
Description:
Solution: N/A
Product: [IMX8MP_MPMP553]
Commit Reason: N/A
Function Area: F_HDMI|F_WESTON

Change-Id: Ic0f2c9042675d894d30cebee15ec4404b8da15ae

--- a/m8mp553_conf/bblayers.conf
+++ b/m8mp553_conf/bblayers.conf
@@ -33,3 +33,4 @@ BBLAYERS += "${BSPDIR}/sources/meta-python2"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-wifi"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-bt"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-overwrite"
+BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-hdmi-udev"
