--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -41,6 +41,6 @@ KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
 KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv.dtb "
 
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
-CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync"
+CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync udev-hdmi-weston"
 
 MACHINE_FEATURES_remove = "packagegroup-imx-mrvl8997 mrvl8997 nxp8987"
