[APP] add demo app to weston taskbar
  Description: add demo app to weston taskbar
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_APP

Change-Id: Ie263842bdd6e9f6201db74ccf67568d6b0f2d81b

--- a/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
+++ b/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
@@ -33,3 +33,27 @@ command=@bindir@/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --n
 [launcher]
 icon=/usr/share/weston/icon-touchscreen.png
 path=/usr/bin/do_touch_cali.sh
+
+[launcher]
+icon=/usr/share/weston/icon_terminal.png
+path=/usr/bin/weston-terminal --font-size=20
+
+[launcher]
+icon=/usr/share/weston/icon-touchscreen.png
+path=/usr/bin/do_touch_cali.sh
+
+[launcher]
+icon=/usr/share/weston/icon-3d.png
+path=/usr/bin/qtopengl.sh
+
+[launcher]
+icon=/usr/share/weston/icon-clock.png
+path=/usr/bin/qtclock.sh
+
+[launcher]
+icon=/usr/share/weston/icon-animation.png
+path=/usr/bin/qtanimation.sh
+
+[launcher]
+icon=/usr/share/weston/icon-cube.png
+path=/usr/bin/qtcube.sh
