--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -35,10 +35,17 @@ UBOOT_DTB_NAME = "imx8mp-m8mp553.dtb"
 # Set linux kernel DTB
 
 #for LVDS Panel 1024x600
-KERNEL_DEVICETREE = "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
+
+#for LVDS Panel 1024x600 VR2
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsam1024-hw02.dtb "
 
 #for LVDS Panel 1920x1080
 KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv.dtb "
+
+#for LVDS Panel 1920x1080 VR2
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv-hw02.dtb "
+
 
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
 CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync udev-hdmi-weston"
