[WESTON] add qtdemo icon and desktop background
  Description: 1. add qtdemo icon and desktop background
               2. remove duplicate item in weston taskbar
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_WESTON

Change-Id: I5410cdf620e96bcdaab58a65780047ec602908d9

--- a/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
+++ b/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
@@ -5,8 +5,9 @@ idle-time=0
 #xwayland=true
 #enable-overlay-view=1
 
-#[shell]
+[shell]
 #size=1920x1080
+background-image=/usr/share/weston/penguin.png
 
 [libinput]
 touchscreen_calibrator=true
@@ -39,10 +40,6 @@ icon=/usr/share/weston/icon_terminal.png
 path=/usr/bin/weston-terminal --font-size=20
 
 [launcher]
-icon=/usr/share/weston/icon-touchscreen.png
-path=/usr/bin/do_touch_cali.sh
-
-[launcher]
 icon=/usr/share/weston/icon-3d.png
 path=/usr/bin/qtopengl.sh
 
@@ -57,3 +54,7 @@ path=/usr/bin/qtanimation.sh
 [launcher]
 icon=/usr/share/weston/icon-cube.png
 path=/usr/bin/qtcube.sh
+
+[launcher]
+icon=/usr/share/weston/icon-demo.png
+path=/usr/bin/qtdemo.sh
