--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -50,6 +50,11 @@ KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv-hw02.dtb "
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
 PREFERRED_VERSION_libmodbus ="3.1.6"
 
+# Enable fortran
+IMAGE_FEATURES += "tools-sdk"
+FORTRAN_forcevariable = ",fortran"
+FORTRAN_TOOLS = "gfortran gfortran-symlinks libgfortran libgfortran-dev "
+CORE_IMAGE_EXTRA_INSTALL += "${FORTRAN_TOOLS}"
 CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync nodejs udev-hdmi-weston libmodbus"
 
 MACHINE_FEATURES_remove = "packagegroup-imx-mrvl8997 mrvl8997 nxp8987"
