--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -62,3 +62,6 @@ PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 CORE_IMAGE_EXTRA_INSTALL += " openjdk-8"
+
+# Qt
+CORE_IMAGE_EXTRA_INSTALL += "qtmultimedia qtsensors qtserialbus qtserialport"
