[Browser] add chromium
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_BROWSER

Change-Id: I9faf3a9584c5d200a6109112845a927957d8d3ea

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -65,3 +65,6 @@ CORE_IMAGE_EXTRA_INSTALL += " openjdk-8"
 
 # Qt
 CORE_IMAGE_EXTRA_INSTALL += "qtmultimedia qtsensors qtserialbus qtserialport"
+
+# For Browser
+CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
