--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -48,10 +48,11 @@ KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv-hw02.dtb "
 
 
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
-CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync udev-hdmi-weston nodejs"
+PREFERRED_VERSION_libmodbus ="3.1.6"
+
+CORE_IMAGE_EXTRA_INSTALL += "rtl88x2ce-wifi rtl88x2ce-bt rtl88x2ce-bt-fw rsync nodejs udev-hdmi-weston libmodbus"
 
 MACHINE_FEATURES_remove = "packagegroup-imx-mrvl8997 mrvl8997 nxp8987"
-
 PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
