[Browser] add browser in weston taskbar
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_BROWSER

Change-Id: Ie54f6d9b9ed81e8fa5f07fcf5f9b891a4a699fdf

--- a/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
+++ b/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
@@ -58,3 +58,7 @@ path=/usr/bin/qtcube.sh
 [launcher]
 icon=/usr/share/weston/icon-demo.png
 path=/usr/bin/qtdemo.sh
+
+[launcher]
+icon=/usr/share/weston/icon-browser.png
+path=/usr/bin/browser.sh
