[POWER_BTN] add poweroff, reboot to weston taskbar
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_POWER_BTN

Change-Id: I64a5f56fad98bed5474c7520bdbeced6622e6cfc

--- a/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
+++ b/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
@@ -62,3 +62,11 @@ path=/usr/bin/qtdemo.sh
 [launcher]
 icon=/usr/share/weston/icon-browser.png
 path=/usr/bin/browser.sh
+
+[launcher]
+icon=/usr/share/weston/icon-poweroff.png
+path=/sbin/poweroff
+
+[launcher]
+icon=/usr/share/weston/icon-reboot.png
+path=/sbin/reboot
