[WIFI] add qtbase wifi to weston taskbar
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_WIFI

Change-Id: I7dd8d9ea22983666646c260d326fc7548c956b64

--- a/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
+++ b/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
@@ -70,3 +70,7 @@ path=/sbin/poweroff
 [launcher]
 icon=/usr/share/weston/icon-reboot.png
 path=/sbin/reboot
+
+[launcher]
+icon=/usr/share/weston/icon-wifi.png
+path=/usr/bin/qtwifi.sh
