[WIFI] install qt-wifi-test
 Description:
 Solution: N/A
 Product: [IMX8MP_MPMP553]
 Commit Reason: N/A
 Function Area: F_WIFI

Change-Id: Ib8469a4a7478ca99bc3ffeac57468a8f3c5d5aa3

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -68,3 +68,6 @@ CORE_IMAGE_EXTRA_INSTALL += "qtmultimedia qtsensors qtserialbus qtserialport"
 
 # For Browser
 CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
+
+# For wifi-test
+CORE_IMAGE_EXTRA_INSTALL += "qt-wifi-test "
