[DFI_CFG] add meta-image to bblayer
 Description:
 Solution: N/A
 Product: [IMX8MP_MPMP553]
 Commit Reason: N/A
 Function Area: F_DFI_CFG

Change-Id: Ic167f7ba8f9fccdac875a91840eb19a1d784562c

--- a/m8mp553_conf/bblayers.conf
+++ b/m8mp553_conf/bblayers.conf
@@ -35,3 +35,4 @@ BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-bt"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-overwrite"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-hdmi-udev"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-java"
+BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-image"
