--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -71,3 +71,5 @@ CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
 
 # For wifi-test
 CORE_IMAGE_EXTRA_INSTALL += "qt-wifi-test "
+
+CORE_IMAGE_EXTRA_INSTALL += "rng-tools v4l-utils kernel-devsrc "
