[YOCTO_SDK] install kernel-devsrc to sdk
 Description:
 Solution: N/A
 Product: [IMX8MP_MPMP553]
 Commit Reason: N/A
 Function Area: F_YOCTO_SDK

Change-Id: Ie7dee6c60bc916b5d8b48d461d36985c8d7c4c05

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -73,3 +73,6 @@ CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
 CORE_IMAGE_EXTRA_INSTALL += "qt-wifi-test "
 
 CORE_IMAGE_EXTRA_INSTALL += "rng-tools v4l-utils kernel-devsrc "
+
+# For Toolchain
+TOOLCHAIN_TARGET_TASK += "kernel-devsrc"
