--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -72,7 +72,7 @@ CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
 # For wifi-test
 CORE_IMAGE_EXTRA_INSTALL += "qt-wifi-test "
 
-CORE_IMAGE_EXTRA_INSTALL += "rng-tools v4l-utils kernel-devsrc "
+CORE_IMAGE_EXTRA_INSTALL += "rng-tools v4l-utils kernel-devsrc rs485-init"
 
 # For Toolchain
 TOOLCHAIN_TARGET_TASK += "kernel-devsrc"
