[Qt_TERMINAL] add qt-terminal to weston taskbar
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_QT_TERMINAL

Change-Id: I7f63c2d9bbba4e15af4d0745480bf09a6471b55a

--- a/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
+++ b/meta-overwrite/recipes-graphics/wayland/weston-init/weston.ini
@@ -74,3 +74,7 @@ path=/sbin/reboot
 [launcher]
 icon=/usr/share/weston/icon-wifi.png
 path=/usr/bin/qtwifi.sh
+
+[launcher]
+icon=/usr/share/weston/icon-qtterminal.png
+path=/usr/bin/qtterminal.sh
