--- a/m8mp553_conf/bblayers.conf
+++ b/m8mp553_conf/bblayers.conf
@@ -36,3 +36,4 @@ BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-overwrite"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-hdmi-udev"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-java"
 BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-image"
+BBLAYERS += "${BSPDIR}/sources/meta-dfi/meta-rs485"
