[LM_SENSORS] install lm_sensors
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_LM_SENSORS

Change-Id: I157af166d36866d15ca27b2ae91c5e738610f52a

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -72,7 +72,7 @@ CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
 # For wifi-test
 CORE_IMAGE_EXTRA_INSTALL += "qt-wifi-test "
 
-CORE_IMAGE_EXTRA_INSTALL += "rng-tools v4l-utils kernel-devsrc rs485-init"
+CORE_IMAGE_EXTRA_INSTALL += "rng-tools v4l-utils kernel-devsrc rs485-init lmsensors"
 
 # For Toolchain
 TOOLCHAIN_TARGET_TASK += "kernel-devsrc"
