[QT-TERMINAL] install qtterminal
  Description:
  Solution: N/A
  Product: [IMX8MP_MPMP553]
  Commit Reason: N/A
  Function Area: F_QT-TERMINAL

Change-Id: I2483eaa13d09875789076fb0183a72b57b5b0b76

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -64,7 +64,7 @@ PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 CORE_IMAGE_EXTRA_INSTALL += " openjdk-8"
 
 # Qt
-CORE_IMAGE_EXTRA_INSTALL += "qtmultimedia qtsensors qtserialbus qtserialport"
+CORE_IMAGE_EXTRA_INSTALL += "qtmultimedia qtsensors qtserialbus qtserialport qtterminal "
 
 # For Browser
 CORE_IMAGE_EXTRA_INSTALL += "chromium-ozone-wayland "
