[CONFIGURE] new kernel dtb for SOC type
   Description:
               imx8mp-m8mp553i-lvdsam1024-hw02.dtb
               imx8mp-m8mp553c-lvdsam1024-hw02.dtb
               imx8mp-m8mp553i-lvdsg215hv-hw02.dtb
               imx8mp-m8mp553c-lvdsg215hv-hw02.dtb

   Solution: N/A
   Product: [IMX8MP_MPMP553]
   Commit Reason: N/A
   Function Area: F_CONFIGURE | F_KERNEL

Change-Id: Iac96f2e1772a347ba81bff246e643e6bd6d7c4b9

--- a/m8mp553_conf/local.conf
+++ b/m8mp553_conf/local.conf
@@ -35,17 +35,22 @@ UBOOT_DTB_NAME = "imx8mp-m8mp553.dtb"
 # Set linux kernel DTB
 
 #for LVDS Panel 1024x600
-KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
+#KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsam1024.dtb "
 
-#for LVDS Panel 1024x600 VR2
-KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsam1024-hw02.dtb "
+#for LVDS Panel 1024x600 VR2 for SOC-I type
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553i-lvdsam1024-hw02.dtb "
+
+#for LVDS Panel 1024x600 VR2 for SOC-C typea
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553c-lvdsam1024-hw02.dtb "
 
 #for LVDS Panel 1920x1080
-KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv.dtb "
+#KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv.dtb "
 
-#for LVDS Panel 1920x1080 VR2
-KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553-lvdsg215hv-hw02.dtb "
+#for LVDS Panel 1920x1080 VR2 for SOC-I type
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553i-lvdsg215hv-hw02.dtb "
 
+#for LVDS Panel 1920x1080 VR2 for SOC-C type
+KERNEL_DEVICETREE += "freescale/imx8mp-m8mp553c-lvdsg215hv-hw02.dtb "
 
 KERNEL_DEFCONFIG = "imx_m8mp553_defconfig"
 PREFERRED_VERSION_libmodbus ="3.1.6"
